fix : overflow issue fix

--- a/public/home.css
+++ b/public/home.css
@@ -24,7 +24,7 @@ body{
 #homeeffect {
   background: rgb(255,255,255);
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   overflow: hidden;
